# letrum-public

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.tsx  Sidebar.tsx
src/lib/: manuscript.ts  types.ts
