[package]
name = "letrum"
version = "0.1.0"
description = "A quiet desktop manuscript editor that stitches scene files into one canvas"
authors = ["Navimar"]
edition = "2021"

[lib]
name = "letrum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.7.0"
